// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate Theme generates dark theme configuration 1`] = `
{
  "palette": {
    "action": {
      "alternate": {
        "danger": {
          "active": "#ff382214",
          "disabled": "#00000014",
          "focus": "#ff382214",
          "hover": "#ff382229",
          "selected": "#ff38223d",
        },
        "primary": {
          "active": "#1890ff14",
          "disabled": "#00000014",
          "focus": "#1890ff14",
          "hover": "#1890ff29",
          "selected": "#1890ff3d",
        },
        "secondary": {
          "active": "#0000000a",
          "disabled": "#0000000a",
          "focus": "#0000000a",
          "hover": "#00000014",
          "selected": "#00000029",
        },
      },
      "danger": {
        "active": "#b91200",
        "focus": "#b91200",
        "hover": "#ff3822",
        "selected": "#860a00",
      },
      "link": {
        "active": "#005dc9",
        "focus": "#005dc9",
        "hover": "#1890ff",
        "selected": "#00448c",
      },
      "primary": {
        "active": "#005dc9",
        "focus": "#005dc9",
        "hover": "#1890ff",
        "selected": "#00448c",
      },
      "secondary": {
        "active": "#636363",
        "focus": "#636363",
        "hover": "#898989",
        "selected": "#464646",
      },
    },
    "background": {
      "neutral": {
        "0": "#cdcdcd",
        "100": "#e5e5e5",
        "200": "#f2f2f2",
        "300": "#f9f9f9",
        "400": "#ffffff",
        "500": "#ffffff",
        "600": "#ffffff",
      },
      "primary": {
        "0": "#aad1ff",
        "100": "#d4e7ff",
        "200": "#eaf3ff",
        "300": "#f5faff",
        "400": "#ffffff",
        "500": "#ffffff",
        "600": "#ffffff",
      },
    },
    "common": {
      "black": "#000000",
      "grey": {
        "100": "#f2f2f2",
        "200": "#e5e5e5",
        "300": "#cdcdcd",
        "400": "#acacac",
        "50": "#f9f9f9",
        "500": "#898989",
        "600": "#636363",
        "700": "#464646",
        "800": "#2b2b2b",
        "900": "#181818",
      },
      "white": "#ffffff",
    },
    "error": {
      "100": "#ffeeeb",
      "200": "#ffdcd5",
      "300": "#ffb9ad",
      "400": "#ff826e",
      "50": "#fff7f6",
      "500": "#ff3822",
      "600": "#b91200",
      "700": "#860a00",
      "800": "#570400",
      "900": "#350100",
    },
    "info": {
      "100": "#eaf3ff",
      "200": "#d4e7ff",
      "300": "#aad1ff",
      "400": "#6ab0ff",
      "50": "#f5faff",
      "500": "#1890ff",
      "600": "#005dc9",
      "700": "#00448c",
      "800": "#002b55",
      "900": "#001834",
    },
    "mode": "light",
    "primary": {
      "100": "#eaf3ff",
      "200": "#d4e7ff",
      "300": "#aad1ff",
      "400": "#6ab0ff",
      "50": "#f5faff",
      "500": "#1890ff",
      "600": "#005dc9",
      "700": "#00448c",
      "800": "#002b55",
      "900": "#001834",
    },
    "secondary": {
      "100": "#f2f2f2",
      "200": "#e5e5e5",
      "300": "#cdcdcd",
      "400": "#acacac",
      "50": "#f9f9f9",
      "500": "#898989",
      "600": "#636363",
      "700": "#464646",
      "800": "#2b2b2b",
      "900": "#181818",
    },
    "success": {
      "100": "#52c41a",
      "200": "#52c41a",
      "300": "#52c41a",
      "400": "#52c41a",
      "50": "#52c41a",
      "500": "#52c41a",
      "600": "#52c41a",
      "700": "#52c41a",
      "800": "#52c41a",
      "900": "#52c41a",
    },
    "warning": {
      "100": "#ff9933",
      "200": "#ff9933",
      "300": "#ff9933",
      "400": "#ff9933",
      "50": "#ff9933",
      "500": "#ff9933",
      "600": "#ff9933",
      "700": "#ff9933",
      "800": "#ff9933",
      "900": "#ff9933",
    },
  },
  "shape": {
    "border": {
      "radius": {
        "lg": 8,
        "md": 4,
        "sm": 2,
        "xl": 16,
        "xs": 1,
      },
      "width": {
        "lg": 8,
        "md": 4,
        "sm": 2,
        "xl": 8,
        "xs": 1,
      },
    },
    "size": {
      "2xl": 48,
      "2xs": 2,
      "3xl": 64,
      "3xs": 1,
      "lg": 24,
      "md": 16,
      "sm": 8,
      "xl": 32,
      "xs": 4,
    },
  },
  "spacing": {
    "gap": {
      "lg": 16,
      "md": 12,
      "sm": 8,
      "xl": 24,
      "xs": 4,
    },
    "margin": {
      "lg": 16,
      "md": 12,
      "sm": 8,
      "xl": 24,
      "xs": 4,
    },
    "padding": {
      "lg": 16,
      "md": 12,
      "sm": 8,
      "xl": 24,
      "xs": 4,
    },
  },
  "typography": {
    "action": {
      "fontFamily": "Inter",
      "fontSize": 14,
      "fontWeight": 400,
      "lineHeight": 16,
    },
    "bodyL": {
      "fontFamily": "Inter",
      "fontSize": 18,
      "fontWeight": 400,
      "lineHeight": 24,
    },
    "bodyLBold": {
      "fontFamily": "Inter",
      "fontSize": 16,
      "fontWeight": 600,
      "lineHeight": 24,
    },
    "bodyM": {
      "fontFamily": "Inter",
      "fontSize": 16,
      "fontWeight": 400,
      "lineHeight": 24,
    },
    "bodyMBold": {
      "fontFamily": "Inter",
      "fontSize": 16,
      "fontWeight": 600,
      "lineHeight": 24,
    },
    "bodyS": {
      "fontFamily": "Inter",
      "fontSize": 14,
      "fontWeight": 400,
      "lineHeight": 16,
    },
    "bodySBold": {
      "fontFamily": "Inter",
      "fontSize": 14,
      "fontWeight": 600,
      "lineHeight": 16,
    },
    "caption": {
      "fontFamily": "Inter",
      "fontSize": 12,
      "fontWeight": 400,
      "lineHeight": 12,
    },
    "code": {
      "fontFamily": "Menlo",
      "fontSize": 14,
      "fontWeight": 400,
      "lineHeight": 24,
    },
    "h1": {
      "fontFamily": "Inter",
      "fontSize": 24,
      "fontWeight": 600,
      "lineHeight": 32,
    },
    "h2": {
      "fontFamily": "Inter",
      "fontSize": 20,
      "fontWeight": 600,
      "lineHeight": 32,
    },
    "h3": {
      "fontFamily": "Inter",
      "fontSize": 18,
      "fontWeight": 600,
      "lineHeight": 24,
    },
    "h4": {
      "fontFamily": "Inter",
      "fontSize": 16,
      "fontWeight": 600,
      "lineHeight": 24,
    },
    "link": {
      "fontFamily": "Inter",
      "fontSize": 14,
      "fontWeight": 400,
      "lineHeight": 16,
      "textDecoration": "underline",
    },
  },
}
`;

exports[`Generate Theme generates light theme configuration 1`] = `
{
  "palette": {
    "action": {
      "alternate": {
        "danger": {
          "active": "#ff544f14",
          "disabled": "#00000014",
          "focus": "#ff544f14",
          "hover": "#ff544f29",
          "selected": "#ff544f3d",
        },
        "primary": {
          "active": "#1890ff14",
          "disabled": "#00000014",
          "focus": "#1890ff14",
          "hover": "#1890ff29",
          "selected": "#1890ff3d",
        },
        "secondary": {
          "active": "#0000000a",
          "disabled": "#0000000a",
          "focus": "#0000000a",
          "hover": "#00000014",
          "selected": "#00000029",
        },
      },
      "danger": {
        "active": "#e50020",
        "focus": "#e50020",
        "hover": "#ff544f",
        "selected": "#a80014",
      },
      "link": {
        "active": "#005dc9",
        "focus": "#005dc9",
        "hover": "#1890ff",
        "selected": "#00448c",
      },
      "primary": {
        "active": "#005dc9",
        "focus": "#005dc9",
        "hover": "#1890ff",
        "selected": "#00448c",
      },
      "secondary": {
        "active": "#636363",
        "focus": "#636363",
        "hover": "#898989",
        "selected": "#464646",
      },
    },
    "background": {
      "neutral": {
        "0": "#cdcdcd",
        "100": "#e5e5e5",
        "200": "#f2f2f2",
        "300": "#f9f9f9",
        "400": "#ffffff",
        "500": "#ffffff",
        "600": "#ffffff",
      },
      "primary": {
        "0": "#aad1ff",
        "100": "#d4e7ff",
        "200": "#eaf3ff",
        "300": "#f5faff",
        "400": "#ffffff",
        "500": "#ffffff",
        "600": "#ffffff",
      },
    },
    "common": {
      "black": "#000000",
      "grey": {
        "100": "#f2f2f2",
        "200": "#e5e5e5",
        "300": "#cdcdcd",
        "400": "#acacac",
        "50": "#f9f9f9",
        "500": "#898989",
        "600": "#636363",
        "700": "#464646",
        "800": "#2b2b2b",
        "900": "#181818",
      },
      "white": "#ffffff",
    },
    "error": {
      "100": "#fdece9",
      "200": "#fdddd8",
      "300": "#ffb9b2",
      "400": "#ff8177",
      "50": "#fff7f6",
      "500": "#ff544f",
      "600": "#e50020",
      "700": "#a80014",
      "800": "#6f0009",
      "900": "#430003",
    },
    "info": {
      "100": "#eaf3ff",
      "200": "#d4e7ff",
      "300": "#aad1ff",
      "400": "#6ab0ff",
      "50": "#f5faff",
      "500": "#1890ff",
      "600": "#005dc9",
      "700": "#00448c",
      "800": "#002b55",
      "900": "#001834",
    },
    "mode": "light",
    "primary": {
      "100": "#eaf3ff",
      "200": "#d4e7ff",
      "300": "#aad1ff",
      "400": "#6ab0ff",
      "50": "#f5faff",
      "500": "#1890ff",
      "600": "#005dc9",
      "700": "#00448c",
      "800": "#002b55",
      "900": "#001834",
    },
    "secondary": {
      "100": "#f2f2f2",
      "200": "#e5e5e5",
      "300": "#cdcdcd",
      "400": "#acacac",
      "50": "#f9f9f9",
      "500": "#898989",
      "600": "#636363",
      "700": "#464646",
      "800": "#2b2b2b",
      "900": "#181818",
    },
    "success": {
      "100": "#fed8d8",
      "200": "#c8f2bf",
      "300": "#a3e493",
      "400": "#76cf60",
      "50": "#effce9",
      "500": "#4cb61b",
      "600": "#259100",
      "700": "#146d05",
      "800": "#134e07",
      "900": "#032300",
    },
    "warning": {
      "100": "#FFF0B3",
      "200": "#FFE1A0",
      "300": "#FFBF69",
      "400": "#F68F1F",
      "50": "#FFF8D4",
      "500": "#DB6B00",
      "600": "#A44C00",
      "700": "#723300",
      "800": "#532300",
      "900": "#361400",
    },
  },
  "shape": {
    "border": {
      "radius": {
        "lg": 8,
        "md": 4,
        "sm": 2,
        "xl": 16,
        "xs": 1,
      },
      "width": {
        "lg": 8,
        "md": 4,
        "sm": 2,
        "xl": 8,
        "xs": 1,
      },
    },
    "size": {
      "2xl": 48,
      "2xs": 2,
      "3xl": 64,
      "3xs": 1,
      "lg": 24,
      "md": 16,
      "sm": 8,
      "xl": 32,
      "xs": 4,
    },
  },
  "spacing": {
    "gap": {
      "lg": 16,
      "md": 12,
      "sm": 8,
      "xl": 24,
      "xs": 4,
    },
    "margin": {
      "lg": 16,
      "md": 12,
      "sm": 8,
      "xl": 24,
      "xs": 4,
    },
    "padding": {
      "lg": 16,
      "md": 12,
      "sm": 8,
      "xl": 24,
      "xs": 4,
    },
  },
  "typography": {
    "action": {
      "fontFamily": "Inter",
      "fontSize": 14,
      "fontWeight": 400,
      "lineHeight": 16,
    },
    "bodyL": {
      "fontFamily": "Inter",
      "fontSize": 18,
      "fontWeight": 400,
      "lineHeight": 24,
    },
    "bodyLBold": {
      "fontFamily": "Inter",
      "fontSize": 16,
      "fontWeight": 600,
      "lineHeight": 24,
    },
    "bodyM": {
      "fontFamily": "Inter",
      "fontSize": 16,
      "fontWeight": 400,
      "lineHeight": 24,
    },
    "bodyMBold": {
      "fontFamily": "Inter",
      "fontSize": 16,
      "fontWeight": 600,
      "lineHeight": 24,
    },
    "bodyS": {
      "fontFamily": "Inter",
      "fontSize": 14,
      "fontWeight": 400,
      "lineHeight": 16,
    },
    "bodySBold": {
      "fontFamily": "Inter",
      "fontSize": 14,
      "fontWeight": 600,
      "lineHeight": 16,
    },
    "caption": {
      "fontFamily": "Inter",
      "fontSize": 12,
      "fontWeight": 400,
      "lineHeight": 12,
    },
    "code": {
      "fontFamily": "Menlo",
      "fontSize": 14,
      "fontWeight": 400,
      "lineHeight": 24,
    },
    "h1": {
      "fontFamily": "Inter",
      "fontSize": 24,
      "fontWeight": 600,
      "lineHeight": 32,
    },
    "h2": {
      "fontFamily": "Inter",
      "fontSize": 20,
      "fontWeight": 600,
      "lineHeight": 32,
    },
    "h3": {
      "fontFamily": "Inter",
      "fontSize": 18,
      "fontWeight": 600,
      "lineHeight": 24,
    },
    "h4": {
      "fontFamily": "Inter",
      "fontSize": 16,
      "fontWeight": 600,
      "lineHeight": 24,
    },
    "link": {
      "fontFamily": "Inter",
      "fontSize": 14,
      "fontWeight": 400,
      "lineHeight": 16,
      "textDecoration": "underline",
    },
  },
}
`;
